--- a/components/UsernameForm.module.css
+++ b/components/UsernameForm.module.css
@@ -1,7 +1,3 @@
-.description {
-  margin-bottom: 40px;
-}
-
 .flexContainer {
     display: flex;
 }
@@ -23,4 +19,31 @@
 .usernameForm {
   display: inline-block;
   text-align: left;
+  margin-top: 40px;
+}
+.window {
+    width: 600px;
+    border: 2px solid #000;
+    background-color: #c0c0c0;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+}
+
+.titleBar {
+    display: flex;
+    background-color: #008080;
+    padding: 5px;
+    justify-content: space-between;
+}
+
+.titleBarButton {
+    width: 10px;
+    height: 10px;
+    background-color: #ff0000;
+    border-radius: 50%;
+    margin-right: 5px;
+}
+
+.windowContent {
+    padding: 20px;
 }
